# dottyper

./: .gitignore  README.md  pyproject.toml
dottyper/: config.py  main.py
