[tool.poetry]
name = "dottyper"
version = "0.1"
description = "Dotfiles manager based on Typer"
authors = ["Vasily Negrebetskiy"]
readme = "README.md"

[tool.poetry.scripts]
dottyper = "dottyper.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
httpx = "^0.27.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
